<resources>
    <string name="app_name">wearing</string>
    <string name="title_home">主页</string>
    <string name="title_publish">发布</string>
    <string name="title_notifications">发布</string>
    <string name="title_mine">我的</string>
    <string name="title_activity_login">登录</string>

    <string name="title_my_collect">我的收藏</string>
    <string name="title_my_subscribe">我的关注</string>
    <string name="title_my_publish">我的发布</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="input_accout">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="sign_up">注册</string>
    <string name="sign_up_and_login">注册并登录</string>
    <string name="login">登录</string>
    <string name="title_collocation">穿搭</string>
    <string name="title_message">消息</string>
    <string name="article1">用海蓝、象牙白、豆绿等法式浓郁的色彩\n\n
临摹出热情浪漫的色差\n\n
非常大胆的撞色设计\n\n
但是看起来却一点也不会觉得老土\n\n
里面可以搭配高领毛衣\n\n
或者单穿下身搭配牛仔裤\n\n
绝对是春日里与众不同的崽\n\n
应该有很多软萌妹喜欢这款碎花衬衫\n\n
复古显白的红色作为打底色\n\n
加上白色花瓣作为点缀\n\n
而且是雪纺的料子，特别舒服\n\n
不管是搭配西装裤还是短裙\n\n
都超级好看\n\n
而且店家超级贴心\n\n
不仅有短袖款还有长袖款\n\n
所以宝宝们可以自行选择哦\n</string>
    <string name="article2">应该有很多软萌妹喜欢这款碎花衬衫\n\n
                            复古显白的红色作为打底色\n\n
                            加上白色花瓣作为点缀\n\n
                            而且是雪纺的料子，特别舒服\n\n
                            不管是搭配西装裤还是短裙\n\n
                            都超级好看\n\n
                            而且店家超级贴心\n\n
                            不仅有短袖款还有长袖款\n\n
                            所以宝宝们可以自行选择哦\n\n
                            非常显气色的一款碎花雪纺衬衫\n\n
                            光是看着就会觉得温柔满满\n\n
                            荷叶边的设计更增添少女感\n\n
                            走起路来特别灵动\n\n
                            袖口处也是做了收边处理\n\n
                            不管是搭配半身裙还是牛仔裤\n\n
                            都是非常好看的哟~\n</string>
    <string name="article3">见过那么多款衬衫\n\n
                            这款绝对是不会烂大街的一件\n\n
                            细格纹的设计显得复古感觉十足\n\n
                            整体看起来简洁文艺\n\n
                            隐约中还透露出一股甜美，特别减龄\n\n
                            小宽松版型遮肉又显瘦\n\n
                            下身搭配一条休闲裤特别好看的说\n\n
                            这件还有一个果绿色\n\n
                            喜欢的宝宝自己去看哦~\n\n
                            这款酱酱真的很想推荐给你们\n\n
                            走在路上绝对被要链接的款\n\n
                            衬衫上用料有报面、玫瑰和古典建筑\n\n
                            蔚蓝色为底色彩感很浓厚\n\n
                            宽松慵懒的男朋友风\n\n
                            宽大短袖和颓废气息领子\n\n
                            满足那些热爱古着风格姑娘们的需要\n\n
                            中性不羁的风格和强烈色彩让它独特起来\n\n
                            里面可以搭配白色短袖或者白色背心\n\n
                            简直不要太好看哦~\n</string>
    <string name="article4">除了广州地区，很多地方的春天还带着几分凉意，尤其是早晚温差比较大。\n\n
                            T恤+外套，穿脱方便，既能保暖又可以凹造型，是这个季节时髦穿搭中的王炸组合。\n\n
                            今春大热的针织衫，温柔知性，搭配条纹T恤+半裙，慵懒风中暗藏青春活力，邻家小姐姐的乖巧范，人见人爱。\n\n
                            换成西装套装，多了几分率性利落感，成套的搭配和谐有腔调，日常和通勤都可以hold住。\n\n
                            印花彩T会更有青春感，搭配干练小西装也很有活力感，和袜子等小配饰相呼应，不惊喜的小细节，是大大的时髦感。</string>
    <string name="article5">叠穿盛行的时尚圈，T恤也不甘落后。\n\n
                            卫衣+白T，是比较基础、简单的打开方式，衣摆留出的内搭，很好地丰富了单品的层次感。\n\n
                            T恤+针织背心，率性小立领，可以很好地削弱肩膀的厚重感，还可以起到修容的作用，搭配休闲裤和帆布鞋，乖巧可爱的学生look。\n\n
                            宽松印花T+高领针织，是高阶组合，一个休闲一个温柔，混搭穿出别样是时髦范！\n\n
                            将针织衫作为披肩，既能作为保暖单品，又能当做别样配饰，一下子提升了整体穿搭的气质。\n\n
                            T恤+牛仔腰封，高个子的高挑仙女可以大胆尝试，显瘦的同时，造型感满分！\n\n
                            T恤+吊带，清新可爱的韩系穿搭，根据吊带款式，凹出不一样的街头潮流。</string>
    <string name="article6">已经进入初夏的广东仙女们，单穿T恤刚刚好，搭配工装休闲裤+复古球鞋，轻轻松松穿出时髦感。\n\n
                            Ringer T 自带层次立体感，让单调的普通T，变得洋气又设计感，经典的黑白配，棒球帽加持，帅气的街头酷感，很有街拍达人的模样！\n\n
                            想要穿出俏皮感，亮色T穿起来，搭配同色系的精致配饰，满满青春少女范，拍照特别好看！\n\n
                            想要打造减龄学院风，polo款式的T恤不能少，条纹的设计更加洋溢青春感，搭配牛仔热裤，满满休闲运动感。\n\n
                            所有显瘦穿搭，腰线不能忘，学会塞衣角，时髦走天下！\n\n
                            显白无敌的黄色T，童趣十足印花图案，俏皮可爱，搭配牛仔背带裤，满满的鬼马少女范，好看！\n\n
                            腿部线条好看的仙女，用宽松长T来打造“下衣失踪”，街头潮范和小性感都满足，和姐妹穿这样出街，美炸天！</string>

    <string name="title1">复古风</string>
    <string name="title2">热情浪漫风</string>
    <string name="title3">简洁文艺风</string>
    <string name="title4">T恤内搭</string>
    <string name="title5">T恤叠穿</string>
    <string name="title6">T恤单穿</string>
</resources>
