<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_collocation"
        android:icon="@drawable/navigation_clothing"
        android:title="@string/title_collocation"
         />
    <item
        android:id="@+id/navigation_publish"
        android:icon="@drawable/navigation_publish"
        android:title="@string/title_publish"
        />
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/navigation_message"
        android:title="@string/title_message" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/navigation_mine"
        android:title="@string/title_mine" />
    <!--<item-->
        <!--android:id="@+id/navigation_mine"-->
        <!--android:icon="@drawable/mine"-->

        <!--android:title="@string/title_mine" />-->

</menu>
