<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    android:clickable="false"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/account" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="8"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="账号"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="8"
                android:hint="@string/input_password"
                android:imeActionId="6"
                android:imeOptions="actionDone"

                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_log_in"
            style="@style/Login_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_sign_up"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up" />
    </LinearLayout>

</FrameLayout>
